重构部分功能，开始开发从Web收集页面的新功能。